<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Btn1"
        android:onClick="buatFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn1" />

    <Button
        android:id="@+id/Btn2"
        android:onClick="ubahFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn2" />

    <Button
        android:id="@+id/Btn3"
        android:onClick="bacaFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn3" />

    <Button
        android:id="@+id/Btn4"
        android:onClick="hapusFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn4" />

    <TextView
        android:id="@+id/textView"
        android:ems="10"
        android:height="210dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView" />
</LinearLayout>