<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:textAlignment="center"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <TextView
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView3" />

    <Button
        android:id="@+id/Btn9"
        android:onClick="pindahinternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn9" />

    <Button
        android:id="@+id/Btn10"
        android:onClick="pindahexternal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Btn10" />
</LinearLayout>